# Ultimate-Video-Gen

./: .gitignore  LICENSE.md  README.md
video_scene_agent/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
video_scene_agent/deploy/prefect/: compose.yml  nginx-prefect.conf.example  register_deployments.py
video_scene_agent/docs/: architecture.md  implementation_plan.md  technical_spec.md
video_scene_agent/scripts/: live_smoke_kling_minimal.py  live_smoke_prefect_minimal.py
video_scene_agent/src/scene_agent/: __init__.py  __main__.py  config.py  main.py  prefect_flows.py  prefect_logging.py  prefect_ops.py  prefect_tasks.py  runtime.py
video_scene_agent/src/scene_agent/flows/: routing.py
video_scene_agent/src/scene_agent/models/: __init__.py  base.py  legacy.py  results.py  storyboard.py
video_scene_agent/src/scene_agent/pipeline/: director.py  director_tools.py  keyframes.py  operator_tools.py  storyboard_checks.py  storyboard_editor.py  storyboard_markdown.py  video_budget.py  video_editor.py  video_segments.py
video_scene_agent/src/scene_agent/prefect_artifacts/: __init__.py  keys.py  links.py  paths.py  publisher.py  report.py  tables.py
video_scene_agent/src/scene_agent/prompts/: __init__.py  common.py  director.py  hydration.py  (+7 more)
video_scene_agent/tests/: test_canonical_models.py  test_integration.py  test_models.py  test_prefect_artifacts.py  test_prefect_flow.py  test_project_structure.py  test_prompts.py  test_public_run.py  test_review_pipeline.py  test_routing.py  test_smoke.py  test_tools.py  test_video_pipeline.py
(+43 files in other folders)
