[project]
name = "video-scene-agent"
version = "0.1.0"
description = "Prefect-based video scene generation using OpenRouter and Kling 3.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "prefect[docker]>=3.0,<4.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
    "aiofiles>=23.0",
    "PyJWT>=2.8",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
